samples/_failures_safe/1761437108_bb7725_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8577ab3.c: In function ‘main’:
./samples/SAFE/__tmp_f8577ab3.c:147:5: error: expected expression at end of input
  147 |     if (compressed_size ==
      |     ^~
./samples/SAFE/__tmp_f8577ab3.c:147:5: error: expected declaration or statement at end of input
